--- a/app/styles/components/_navigation.scss
+++ b/app/styles/components/_navigation.scss
@@ -6,4 +6,10 @@
 	.menu-text {
 		color: $nav-text-color;
 	}
+	.active-link {
+		font-weight: bold;
+	}
+	.menu > li > a {
+		color: #AEB8C3;
+	}
 }
